<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>
    <string name="download">Download</string>

    <string name="first_radio">Glid-Image Loading Library by BumpTech</string>
    <string name="second_radio">LoadApp-Current repository by Udacity</string>
    <string name="third_radio">Retrofit-Type safe HTTP client for Android and java by Square, Inc</string>

    <string name="notification_channel_id">loading_status_channel</string>
    <string name="notification_channel_name">status_channel</string>

    <string name="success">successful</string>
    <string name="fail">fail</string>

    <string name="please_message">Please select the file to download</string>

    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="file_name">File name:</string>
    <string name="file_status">Status:</string>
    <string name="ok">Ok</string>
</resources>
