<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    app:layoutDescription="@xml/content_detail_motion"
    tools:showIn="@layout/activity_detail">

    <TextView
        android:id="@+id/textView_fileName_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="filenameValue"
        android:textSize="@dimen/default_text_size"
       />

    <TextView
        android:id="@+id/textView_status_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="statusValue"
        android:textSize="@dimen/default_text_size"
        />

    <TextView
        android:id="@+id/textView_fileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_name"
        android:textSize="@dimen/default_text_size"
       />

    <TextView
        android:id="@+id/textView_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_status"
        android:textSize="@dimen/default_text_size"
       />

    <Button
        android:id="@+id/ok_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/ok"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.motion.widget.MotionLayout>